pkg/lang/testdata/ub/config/invalid/configurations-bare-ident.ub
factory: {
  configurations: { aws.default: { region: region } }
}
